--- a/styles/temples.css
+++ b/styles/temples.css
@@ -3,6 +3,12 @@ body {
     margin: 0;
 }
 
+nav {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
 header {
     background-color: #2c3e50;
     color: white;
